tests/parsing/smtlib/v2.7/errors/039_identifier_with_open_paren_1.smt2
(set-logic ALL)
(assert ((foo)))
